--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ trace = false
 server.port=8080
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:postgresql://localhost:5432/useraccount
-spring.datasource.username = developer
-spring.datasource.password = admin
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username = developer
+#spring.datasource.password = admin
 
 # Hibernate
 
