--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ trace = false
 server.port=8080
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
-spring.datasource.username = postgres
-spring.datasource.password = password
-#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
+#spring.datasource.username = postgres
+#spring.datasource.password = password
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 
 # Hibernate
 
