--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ server.port=8080
 #spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
 #spring.datasource.username = postgres
 #spring.datasource.password = password
-spring.datasource.url = jdbc:postgresql://localhost:5432/useraccount
-spring.datasource.username = developer
-spring.datasource.password = admin
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username = developer
+#spring.datasource.password = admin
 # Hibernate
 
 # Hibernate ddl auto (create, create-drop, validate, update)
