--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ version: '3'
 services:
   postgres:
     image: postgres:latest
-    ports:
-      - "5432:5432"
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=postgres
@@ -15,3 +13,5 @@ services:
       - "8080:8080"
     depends_on:
       - postgres
+    links:
+      - postgres:postgres  
