--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,20 @@ trace = false
 server.port=8080
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+
+# Docker
 #spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
 #spring.datasource.username = postgres
 #spring.datasource.password = password
+
+# Work
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+
+# Home
+#spring.datasource.url = jdbc:postgresql://localhost:5432/useraccount
 #spring.datasource.username = developer
 #spring.datasource.password = admin
+
 # Hibernate
 
 # Hibernate ddl auto (create, create-drop, validate, update)
