Added Javadocs to project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=8080
 #spring.datasource.username = postgres
 #spring.datasource.password = password
 
-# Work
+# Work/Default postgres database
 #spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 
 # Home
