Application properties for docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,12 @@ server.port=8080
 #spring.datasource.password = password
 
 # Work/Default postgres database
-#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 
 # Home
-spring.datasource.url = jdbc:postgresql://localhost:5432/useraccount
-spring.datasource.username = developer
-spring.datasource.password = admin
+#spring.datasource.url = jdbc:postgresql://localhost:5432/useraccount
+#spring.datasource.username = developer
+#spring.datasource.password = admin
 
 # Hibernate
 
