--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ server.port=8080
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
 # Docker
-#spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
-#spring.datasource.username = postgres
-#spring.datasource.password = password
+spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = password
 
 # Work/Default postgres database
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 
 # Home
 #spring.datasource.url = jdbc:postgresql://localhost:5432/useraccount
