updated app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.url = jdbc:postgresql://postgres:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = password
 
+# Local instance example
+#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+
 
 # Hibernate
 
